# wtrade

./: .gitignore  CMakeLists.txt  Changelog  README.md  readme.md
demo/arrow_simple/: CMakeLists.txt
demo/arrow_styled/: CMakeLists.txt
demo/axes_simple/: CMakeLists.txt
demo/axes_styled/: main.cpp
demo/background_gradient/: CMakeLists.txt  main.cpp
demo/background_solid/: main.cpp
demo/barplot2d_simple/: CMakeLists.txt
demo/barplot2d_styled/: CMakeLists.txt
demo/candlestickgraph2d_simple/: main.cpp
demo/candlestickgraph2d_styled/: main.cpp
demo/circle_simple/: main.cpp
demo/circle_styled/: CMakeLists.txt  main.cpp
demo/grid_black/: CMakeLists.txt
demo/grid_color/: CMakeLists.txt
demo/lineplot/: CMakeLists.txt  main.cpp
demo/ohlcbar2d_simple/: CMakeLists.txt
demo/ohlcgraph2d_simple/: main.cpp
demo/ohlcgraph2d_styled/: CMakeLists.txt  main.cpp
demo/rectangle_simple/: CMakeLists.txt
demo/scatterplot_circle/: main.cpp
demo/text_simple/: CMakeLists.txt
demo/tick_labels_simple/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/connections/: CMakeLists.txt
src/connections/yahoodataconnection/: CMakeLists.txt  Strings.h  YahooDataConnection.cpp  YahooDataConnection.h  YahooNetwork.cpp  YahooNetwork.h  yahoodataconnection.json  yahoodataconnection.pro  yahoodataconnection_global.h  yqlqueries.qrc
src/connections/yahoodataconnection/yql/: GetMarketList.yql
src/trade/: CMakeLists.txt  Currency.cpp  Currency.h  Market.cpp  Market.h  Stock.cpp  Stock.h  trade.cpp  trade.h  trade.pro  trade_global.h
src/wlogger/: CMakeLists.txt  Logger.cpp  Logger.h  SingletonLogger.cpp  SingletonLogger.h  wlogger_global.h
src/wtrade/: Application.cpp  Application.h  CMakeLists.txt  Options.cpp  Options.h  main.cpp
src/wtradegui/: CMakeLists.txt  DatabaseOptionWidget.cpp  DatabaseOptionWidget.h  EmptyOptionWidget.cpp  EmptyOptionWidget.h  FileMenu.cpp  FileMenu.h  LoggerLevelWidget.cpp  LoggerLevelWidget.h  LoggerListWidget.cpp  LoggerListWidget.h  LoggerWidget.cpp  LoggerWidget.h  MainWindow.cpp  MainWindow.h  MenuAction.cpp  MenuAction.h  MenuBar.cpp  MenuBar.h  MiniStockPlot.cpp  MiniStockPlot.h  OptionTreeWidget.cpp  OptionTreeWidget.h  OptionWidget.cpp  OptionWidget.h  PriceLabel.cpp  PriceLabel.h  StockWidget.cpp  StockWidget.h  Strings.h  ToolsMenu.cpp  ToolsMenu.h  wtradegui_global.h
src/wupdater/: CMakeLists.txt  ConnectionLibraryLoader.cpp  ConnectionLibraryLoader.h  DataConnection.h  Updater.cpp  Updater.h  wupdater_global.h
subtrees/: CMakeLists.txt
subtrees/wplot/: CMakeLists.txt  Doxyfile  LICENSE
subtrees/wplot/demo/: CMakeLists.txt
subtrees/wplot/demo/arrow_simple/: main.cpp
subtrees/wplot/demo/arrow_styled/: main.cpp
subtrees/wplot/demo/axes_simple/: main.cpp
subtrees/wplot/demo/axes_styled/: CMakeLists.txt
subtrees/wplot/demo/background_solid/: CMakeLists.txt
subtrees/wplot/demo/barplot2d_simple/: main.cpp
subtrees/wplot/demo/barplot2d_styled/: main.cpp
subtrees/wplot/demo/candlestick2d_simple/: CMakeLists.txt  main.cpp
subtrees/wplot/demo/candlestick2d_styled/: CMakeLists.txt  main.cpp
subtrees/wplot/demo/candlestickgraph2d_simple/: CMakeLists.txt
subtrees/wplot/demo/candlestickgraph2d_styled/: CMakeLists.txt
subtrees/wplot/demo/circle_simple/: CMakeLists.txt
subtrees/wplot/demo/grid_black/: main.cpp
subtrees/wplot/demo/grid_color/: main.cpp
subtrees/wplot/demo/ohlcbar2d_simple/: main.cpp
subtrees/wplot/demo/ohlcbar2d_styled/: CMakeLists.txt  main.cpp
subtrees/wplot/demo/ohlcgraph2d_simple/: CMakeLists.txt
subtrees/wplot/demo/rectangle_simple/: main.cpp
subtrees/wplot/demo/rectangle_styled/: CMakeLists.txt  main.cpp
subtrees/wplot/demo/scatterplot_circle/: CMakeLists.txt
subtrees/wplot/demo/text_simple/: main.cpp
subtrees/wplot/demo/text_styled/: CMakeLists.txt  main.cpp
subtrees/wplot/doc/doxygen/: mainpage.dox
subtrees/wplot/wplot/: Arrow2D.cpp  Axes2D.cpp  Axes2D.h  Background.cpp  BarGraph2D.cpp  CMakeLists.txt  CandleStick2D.h  CandleStickGraph2D.cpp  CandleStickGraph2D.h  FinancialGraph2D.cpp  Graph.h  Grid2D.cpp  Grid2D.h  Layer2D.cpp  Layer2D.h  LineGraph2D.h  OHLC.cpp  OHLC.h  OHLCBar2D.cpp  OHLCGraph2D.cpp  OHLCGraph2D.h  Padding.cpp  Padding.h  Plot.cpp  Plot.h  Rectangle.cpp  Rectangle.h  ScalarGraph2D.cpp  ScatterGraph2D.h  Text2D.cpp  Text2D.h  Ticks2D.h
subtrees/wplot/wplot/Private/: LinearTicksCalculator.h  TicksCalculator.cpp
test/: CMakeLists.txt
test/wtradegui/: CMakeLists.txt
test/wtradegui/loggerwidget/: CMakeLists.txt  main.cpp
test/wtradegui/optionwidget/: CMakeLists.txt  main.cpp
test/wtradegui/stockwidget/: CMakeLists.txt  main.cpp
wplot/: Arrow2D.h  Background.h  BarGraph2D.h  CMakeLists.txt  CandleStick2D.cpp  Circle.cpp  Circle.h  FinancialGraph2D.h  FinancialItem2D.cpp  FinancialItem2D.h  Graph.cpp  Graph2D.cpp  Graph2D.h  Item2D.cpp  Item2D.h  Layer.cpp  Layer.h  LineGraph2D.cpp  OHLCBar2D.h  Plot2D.cpp  Plot2D.h  ScalarGraph2D.h  ScatterGraph2D.cpp  Ticks2D.cpp  WPlotGlobal.h
wplot/Private/: LinearTicksCalculator.cpp  TicksCalculator.h
